--- a/src/style/ItemPage.css
+++ b/src/style/ItemPage.css
@@ -3,16 +3,21 @@
   padding-bottom: 0;
 }
 
+.ItemPage__primary-mobile-image-figure {
+  margin: 0;
+  margin-bottom: 24px;
+}
+
 .ItemPage__primary-image-mobile {
   width: 100%;
   height: auto;
   display: block;
-  margin-bottom: 24px;
 }
 
 .ItemPage__title {
   color: #313131;
   font-family: "Nunito Sans", sans-serif;
+  margin-top: 0;
 }
 
 .ItemPage__year {
@@ -25,7 +30,8 @@
   font-family: "Lora", serif;
 }
 
-.ItemPage__gallery-caption {
+.ItemPage__gallery-caption,
+.ItemPage__primary-mobile-image-caption {
   color: #313131;
   font-family: "Lora", serif;
 }
@@ -55,7 +61,7 @@
     display: block;
   }
 
-  .ItemPage__primary-image-mobile {
+  .ItemPage__primary-mobile-image-figure {
     display: none;
   }
 
@@ -63,7 +69,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
-    gap: 24px;
+    gap: 48px;
   }
 
   .ItemPage__info {
