--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -29,15 +29,110 @@
   }
   
   .menu-button {
-    background: none;
-    border: none;
-    color: black;
-    font-size: 30px;
+    width: 18.75px;
+    height: 16px;
+    position: relative;
+    left: -2px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
     cursor: pointer;
   }
-  
+
+  .menu-button span {
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: #313131;
+    border-radius: 2px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  .menu-button span:nth-child(1) {
+    top: 0px;
+  }
+    
+  .menu-button span:nth-child(2),.menu-button span:nth-child(3) {
+    top: 7px;
+  }
+    
+  .menu-button span:nth-child(4) {
+    top: 14px;
+  }
+    
+  .menu-button[data-open="true"] span:nth-child(1) {
+    top: 7px;
+    width: 0%;
+    left: 50%;
+  }
+    
+  .menu-button[data-open="true"] span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+    
+  .menu-button[data-open="true"] span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+    
+  .menu-button[data-open="true"] span:nth-child(4) {
+    top: 7px;
+    width: 0%;
+    left: 50%;
+  }
+
   .menu-button:hover {
     color: #f39c12; /* Change color on hover */
+  }
+
+  .header__slide-out-nav {
+    height: calc(100vh - 33px);
+    position: fixed;
+    z-index: 9;
+    width: 100%;
+    background-color: #f0f4ec; /* Dark background */
+    transform: translateX(100%);
+    transition: all 0.25s ease-in-out;
+    border-top: 1px solid #D6D6D6;
+  }
+
+  .header__slide-out-nav[data-open="true"] {
+    transform: translateX(0%);
+  }
+
+  .header__slide-out-nav-inner.page-container {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .header__slide-out-nav-inner.page-container a {
+    color: #313131;
+    font-family: "Lora", serif;
+    text-decoration: none;
+    font-size: 20px;
   }
   
   @media screen and (min-width: 600px){
